tool site design

--- a/sip-cal/index.html
+++ b/sip-cal/index.html
@@ -19,7 +19,7 @@
       <div class="content">
         <!-- title -->
         <div class="title page-header-custom">
-          <h1>SIP Calculator</h1>
+          <h1>SIP Calculator-1111</h1>
           https://sipcalculator.in/result
           <!-- <p class="">Calculate returns on your SIP investments.</p> -->
         </div>
@@ -83,6 +83,7 @@
               <div class="col-md-4">
     
               </div>
+              <input type="text" class="form-control" id="amountInputField" placeholder="20000" data-name="amount" required="">
             </div>
     
             <div class="row">
