--- a/sip-3/index.html
+++ b/sip-3/index.html
@@ -20,10 +20,11 @@
     <div class="card-container">
       <div class="card-main">
         <div
-          class="card calc-card revealator-slideup revealator-once revealator-delay1"
-        >
+          class="card calc-card revealator-slideup revealator-once revealator-delay1">
           <div class="form-holder">
             <h3>Investment Type Monthly SIP</h3>
+    
+           
             <div class="lb-txt1">
               <label for="Monthly Investment">Monthly Investment (₹) :</label>
 
